# elfcore

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
ci/: install_deps.sh  test.sh  test.txt
elfcore/: Cargo.toml
elfcore-sample/: Cargo.toml
elfcore-sample/src/: main.rs
elfcore/src/: coredump.rs  elf.rs  error.rs  lib.rs  ptrace.rs
elfcore/src/arch/: aarch64.rs  mod.rs  x86_64.rs
elfcore/src/linux/: memory.rs  mod.rs  process.rs  ptrace.rs
src/lib/: coredump.rs  elf.rs  error.rs  lib.rs  ptrace.rs
src/lib/arch/: aarch64.rs  mod.rs  x86_64.rs
