[workspace]
resolver = "2"
members = [
    "elfcore",
    "elfcore-sample",
]

[workspace.dependencies]
anyhow = "1.0"
libc = "0.2"
nix = { version = "0.26", default-features = false, features = ["fs", "feature", "process", "ptrace", "uio"] }
smallvec = "1.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.17"
zerocopy = "0.6"
