[workspace]
resolver = "2"
members = [
    "elfcore",
    "elfcore-sample",
]

[workspace.dependencies]
anyhow = "1.0"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "feature", "process", "ptrace", "uio"] }
smallvec = "1.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3.17"
zerocopy = { version = "0.8", features = ["derive"] }
